hphp/test/zend/bad/ext-standard-strings/bug54454.php
<?php
var_dump(substr_compare('/', '/asd', 0, 4));
?>